# wellNest

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  create_admin.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/routers/: __init__.py  analytics.py  auth.py  chat.py  health.py  journal.py  mood_log.py  user.py
backend/app/core/: __init__.py  database.py  decoder_encoder.py  email.py  exceptions.py  logging.py  responses.py  security.py  status.py  time_zone.py
backend/app/model/: __init__.py
backend/app/models/: __init__.py  apiError.py  chat_session.py  journal.py  mood_log.py  response.py  user.py
backend/app/prompt/: chat_conversation.py  journal_generation.py  mood_log_from_journal_generation.py  mood_log_generation.py
backend/app/schemas/: __init__.py  auth.py  chat_session.py  journal.py  mood.py  user.py  user_profile.py
backend/app/schemas/AI_generation/: journal.py  mood_log.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  chat_service.py  cloudinary_service.py  email_service.py  journal_service.py  mood_service.py  user_service.py
backend/app/services/ai_service/: __init__.py  chat_coversation_generation.py  journal_generation.py  mood_log_from_journal_generation.py  mood_log_generation.py
backend/app/services/background_task/: create_mood_log_from_journal.py
backend/app/templates/: __init__.py  email_template.py
backend/app/utils/: lanhchain_utility.py
docs/: Design.md
frontend/: .env.example  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/auth/: layout.tsx
frontend/app/landing/: page.tsx
frontend/components/: ConsentModal.tsx  LogoSvg.tsx  app-sidebar.tsx
frontend/components/chat/: ChatHeader.tsx  ChatInput.tsx  (+4 more)
frontend/hooks/: useProtectedRoute.ts
frontend/lib/: api.ts  store.ts  types.ts
(+11 files in other folders)
